[package]
name = "ira_gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.11"
rand = "0.9.0"
good_lp = { version = "1.12.0", features=["highs"], default-features=false }
highs = "1.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
is-terminal = "0.4.17"
skim = { version = "3.7.0", default-features = false }
[profile.release]
debug = true
